# DigitalFilters

./: .gitignore  CMakeLists.txt  LowPassFilter.cpp  LowPassFilter.h  README.md  main.cpp  plot_data.py
HanningFilter/: HanningFilter.cpp  HanningFilter.h  main.cpp
HighPassFilter/: HighPassFilter.cpp  HighPassFilter.h  main.cpp
LowPassFilter/: LowPassFilter.cpp  LowPassFilter.h  main.cpp
NotchFilter/: NotchFilter.cpp  NotchFilter.h  main.cpp
